--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             one card, which is placed face down and is not turned up until the bets are settled at the end of the hand.
         </p>
         
-        <h3>Surrender</h3>
+        <h3>Surrendering</h3>
         <p>
             If you have an especially bad hand, you can "surrender" to the dealer instead of hitting or staying. Surrendering 
             deducts 50% off your original bet, but it can save you from a total loss. To signal a surrender to the dealer, 
