--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p>
             This is an option open to the player of doubling their bet when the original two cards dealt total 9, 10, or 11. When the player's turn comes, they place a bet equal to the original bet, and the dealer gives the player just one card, which is placed face down and is not turned up until the bets are settled at the end of the hand. 
         </p>
-        <h3>Surrender</h3>
+        <h3>Surrendering</h3>
         <p>
             If you have an especially bad hand, “surrender” to the dealer instead of hitting or staying. Surrendering deducts 50% off your original bet, but it can save you from a total loss.To signal a surrender to the dealer, slide your pointer finger in a horizontal line on the game table.Not all casinos may let you surrender.
         </p>
