--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Strategy</h2>
+    <h2>STRATEGY</h2>
     <article> 
         <p>There are some strategies that can increase your chances of success. 
         Here are a few tips:
@@ -18,7 +18,7 @@
             <li>Never split 10s, but always split aces and 8s.</li>
         </ul>
         </p>
-        <p><important>NB:</important>There is not guaranteed way to win in BlackJack!</p>
+        <p><important><NB:</important>There is not guaranteed way to win in BlackJack!</p>
     </article>
     <section>
         <h2>Good Hand In BlackJack</h2>
