--- a/index.html
+++ b/index.html
@@ -8,6 +8,35 @@
   <link rel="stylesheet" href="style.css"> <!-- Link to the external CSS file -->
 </head>
 <body>
+    <div id="background-container">
+        <h1>Welcome to Blackjack</h1>
+    </div>
+    <div>
+        <h2>What is Blackjack?</h2>
+        <p>
+            Blackjack is a card game where players aim to get a hand that is closer to 21 than the dealer’s hand, 
+            without going over 21. Each card is worth its face value, with face cards (Jack, Queen, King) worth 10 and Aces worth either 1 or 11. 
+            The game is played with one or more decks of standard playing cards.
+            <h3 id ="cv">Card Values</h3>
+            <ul>
+            <li>Number cards (2-10): Face value.</li>
+            <li>Face cards (King, Queen, Jack): Worth 10 points.</li>
+            <li>Aces: Can be worth 1 or 11 points, depending on which is more beneficial for the hand.</li>
+            
+            </ul>
+     </p>
+    </div>
+    <div>
+        <h2> Rules of Blackjack</h2>
+        <p>The goal of blackjack is simple.
+             All one needs to do to win is have a higher hand value than the dealer, without going over 21. 
+             Players are dealt two cards and can then choose to “hit” (receive additional cards) or “stand” (keep their current hand). 
+             The dealer also receives two cards, but only one is face up.
+             If a player’s hand exceeds 21, they “bust” and lose the game. 
+             If the dealer busts, all remaining players win. If neither the player nor the dealer busts, 
+             the player with the highest hand value wins.
+            </p>
+        </div>
     <h2>STRATEGY</h2>
     <article> 
         <p>There are some strategies that can increase your chances of success. 
